--- a/ExcelReaderWPF/ProgressBar.xaml
+++ b/ExcelReaderWPF/ProgressBar.xaml
@@ -9,7 +9,7 @@
       Title="ProgressBar">
 
     <Grid Margin="20,20,158,261">
-        <ProgressBar Minimum="0" Maximum="100" Value="20" Margin="63,148,-83,-156"/>
+        <ProgressBar x:Name="pBar" Minimum="0" Maximum="100" Value="20" Margin="63,148,-83,-156"/>
         <TextBox x:Name="ProgressBox" Height="20" Margin="42,102,-108,-103" TextWrapping="Wrap" VerticalAlignment="Top" IsReadOnly="True" HorizontalAlignment="Left" Width="188"/>
     </Grid>
 </Page>
