--- a/ExcelReaderWPF/MainPage.xaml
+++ b/ExcelReaderWPF/MainPage.xaml
@@ -8,8 +8,11 @@
 	  d:DesignHeight="360" d:DesignWidth="600"
 	  Title="MainPage">
 
-	<Grid>
-		<TextBox x:Name="File1Box" HorizontalAlignment="Left" Height="20" Margin="282,100,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="188" IsReadOnly="True"/>
+    <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="background.png" Stretch="Uniform"/>
+        </Grid.Background>
+        <TextBox x:Name="File1Box" HorizontalAlignment="Left" Height="20" Margin="282,100,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="188" IsReadOnly="True"/>
 		<Button x:Name="File1Select" Content="Browse" HorizontalAlignment="Left" Margin="181,100,0,0" VerticalAlignment="Top" Width="75" Click="File1Select_Click"/>
 		<Label Content="Excel File 1" HorizontalAlignment="Left" Margin="64,97,0,0" VerticalAlignment="Top" Height="28" Width="76"/>
 		<TextBox x:Name="File2Box" HorizontalAlignment="Left" Height="20" Margin="282,142,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="188" IsReadOnly="True"/>
