Fixed Excel process closing, application no longer leaves stray processes.

--- a/ExcelReaderWPF/MainWindow.xaml
+++ b/ExcelReaderWPF/MainWindow.xaml
@@ -5,5 +5,6 @@
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:local="clr-namespace:ExcelReaderWPF"
 		mc:Ignorable="d"
-		Title="Excel Reader" Height="360" Width="600" Source="Pages/FirstPage.xaml">
+		Title="Excel Reader" Height="360" Width="600" Source="Pages/FirstPage.xaml"
+        Closing="DataWindow_Closing">
 </NavigationWindow>
